data/derived/sp14/progs/unify/prog3885.ml.out
Characters 49-62:
  (digitsOfInt n/10) :: [n/int_of_float(float_of_int 10 ** float_of_int (numdig -1)) mod 10];;
   ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
